--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
-cmake_minimum_required(VERSION 3.22)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
+PROJECT(PCRE2 C)
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED TRUE)
+
+INCLUDE(GNUInstallDirs)
 
 project(NDR_CRegex
     VERSION 0.1.1
@@ -13,6 +18,6 @@ add_library(ndr_cregex STATIC src/ndr_regex.c src/ndr_regextracker.c src/ndr_reg
 configure_file(${CMAKE_SOURCE_DIR}/src/ndr_regex.h ${CMAKE_SOURCE_DIR}/include/ndr_regex.h)
 
 install (TARGETS ndr_cregex
-         ARCHIVE DESTINATION lib
-         LIBRARY DESTINATION lib
+         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
          RUNTIME DESTINATION bin)
