--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,13 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
 add_library(ndr_cregex STATIC src/ndr_regex.c src/ndr_regextracker.c src/ndr_regexnode.c)
 
+TARGET_INCLUDE_DIRECTORIES(ndr_cregex PUBLIC ${CMAKE_SOURCE_DIR}/lib)
+
 configure_file(${CMAKE_SOURCE_DIR}/src/ndr_regex.h ${CMAKE_SOURCE_DIR}/include/ndr_regex.h)
 
 install (TARGETS ndr_cregex
          ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
          LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
          RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+         
+         
