--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,18 +12,19 @@ project(NDR_CRegex
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 add_library(ndr_cregex STATIC src/ndr_regex.c src/ndr_regextracker.c src/ndr_regexnode.c)
 
 TARGET_INCLUDE_DIRECTORIES(ndr_cregex PUBLIC ${CMAKE_SOURCE_DIR}/lib)
+TARGET_INCLUDE_DIRECTORIES(ndr_cregex PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 configure_file(${CMAKE_SOURCE_DIR}/src/ndr_regex.h ${CMAKE_SOURCE_DIR}/include/ndr_regex.h)
 
+install (TARGETS ndr_cregex
+         ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
+         LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
+         RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+         
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/ndr_regex.h DESTINATION ${CMAKE_SOURCE_DIR}/include)
 
-install (TARGETS ndr_cregex
-         ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
-         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
-         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
-         
-         
