--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,9 @@ TARGET_INCLUDE_DIRECTORIES(ndr_cregex PUBLIC ${CMAKE_SOURCE_DIR}/include)
 configure_file(${CMAKE_SOURCE_DIR}/src/ndr_regex.h ${CMAKE_SOURCE_DIR}/include/ndr_regex.h)
 
 install (TARGETS ndr_cregex
-         ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
-         LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
-         RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+         ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}
+         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}
+         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR})
          
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/ndr_regex.h DESTINATION ${CMAKE_SOURCE_DIR}/include)
 
